--- a/gestiondocumental-cliente/pom.xml
+++ b/gestiondocumental-cliente/pom.xml
@@ -58,26 +58,19 @@
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
-		<groupId>org.codehaus.jackson</groupId>
-		<artifactId>jackson-core-asl</artifactId>
-		<version>1.7.2</version>
-		<type>jar</type>
-		<scope>compile</scope>
-	</dependency>
-	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-oxm</artifactId>
 		<version>3.0.5.RELEASE</version>
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
-	<dependency>
+	<!-- dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-mapper-asl</artifactId>
 		<version>1.7.2</version>
 		<type>jar</type>
 		<scope>compile</scope>
-	</dependency>
+	</dependency -->
     <dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context-support</artifactId>
