--- a/gestiondocumental-cliente/pom.xml
+++ b/gestiondocumental-cliente/pom.xml
@@ -59,6 +59,11 @@
 		<artifactId>spring-context-support</artifactId>
 		<version>3.0.5.RELEASE</version>
     </dependency>
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
+		<version>3.0.5.RELEASE</version>
+	</dependency>
 	  <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -66,6 +71,13 @@
       <scope>test</scope>
     </dependency>
     
+<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-core</artifactId>
+	<version>3.1.2.RELEASE</version>
+</dependency>
+            
+            
 	<dependency>
 	<groupId>org.codehaus.jackson</groupId>
 	<artifactId>jackson-jaxrs</artifactId>
