--- a/gestiondocumental-cliente/src/main/webapp/WEB-INF/log4j.properties
+++ b/gestiondocumental-cliente/src/main/webapp/WEB-INF/log4j.properties
@@ -1,22 +1,23 @@
-log4j.rootLogger=ERROR, stdout
-
-
+#localPattern=%d (%F:%L) %t %-5p  %x - %m%n
+localPattern=%d (%F:%L) %-5p %x - %m%n
+log4j.rootLogger=DEBUG, A1 
+# A1 is set to be a ConsoleAppender which outputs to System.out. 
+log4j.logger.org.apache.commons=ERROR
+log4j.logger.net.sf.hibernate.cfg=ERROR
 log4j.logger.org.hibernate=ERROR
-log4j.logger.org.hibernate.SQL=ERROR
+log4j.logger.org.hibernate.SQL=DEBUG
 log4j.logger.org.hibernate.type=ERROR
 log4j.logger.org.hibernate.tool.hbm2ddl=ERROR
 log4j.logger.org.hibernate.cache=ERROR
-log4j.logger.org.springframework=ERROR
+log4j.logger.org.springframework=DEBUG
+log4j.logger.org.springframework.security.web=DEBUG
 log4j.logger.org.springframework.web=DEBUG
-#log4j.logger.org.springframework.web.servlet=ERROR
 log4j.logger.org.springframework.jdbc=ERROR
 log4j.logger.org.springframework.orm=ERROR
-log4j.logger.org.springframework.beans=ERROR
-
-log4j.logger.com.sun.xml.bind.v2.runtime.unmarshaller.UnmarshallerImpl=DEBUG, stdout
+log4j.logger.org.displaytag=ERROR
+log4j.logger.com.sun.xml.bind.v2.runtime.unmarshaller.UnmarshallerImpl=DEBUG
+log4j.logger.pe.com.munmiraflores=DEBUG 
 	
-log4j.logger.pe.com.munmirafloresva=DEBUG 
-	
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d (%F:%L) %-5p %x - %m%n
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=${localPattern}
