--- a/gestiondocumental-cliente/src/main/webapp/WEB-INF/web.xml
+++ b/gestiondocumental-cliente/src/main/webapp/WEB-INF/web.xml
@@ -7,22 +7,32 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   <display-name>Archetype Created Web Application</display-name>
   
   <context-param>
-		<param-name>log4jConfigLocation</param-name>
-		<param-value>/WEB-INF/log4j.properties</param-value>
-	</context-param>
+	 <param-name>log4jConfigLocation</param-name>
+	 <param-value>/WEB-INF/log4j.properties</param-value>
+  </context-param>
   <context-param>
      <param-name>contextConfigLocation</param-name>
      <param-value>/WEB-INF/applicationContext.xml</param-value>
   </context-param>
   
-  <listener>
-	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
    <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
     
-   
+   <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+   <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
    
   <servlet>
   	<servlet-name>DatosGeneralesServlet</servlet-name>
@@ -33,8 +43,6 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   	<url-pattern>/DatosGeneralesServlet</url-pattern>
   </servlet-mapping>  
   
-  
-  
   <servlet>
 	<servlet-name>spring</servlet-name>
 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -42,14 +50,15 @@ xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
   </servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>/gestion/*</url-pattern>
+		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
-
 
  <session-config>
     <session-timeout>180</session-timeout>
   </session-config>
   
-  
+   <welcome-file-list>
+    <welcome-file>redirect.jsp</welcome-file>
+  </welcome-file-list>
   
 </web-app>
