--- a/gestiondocumental-cliente/src/main/webapp/WEB-INF/log4j.properties
+++ b/gestiondocumental-cliente/src/main/webapp/WEB-INF/log4j.properties
@@ -9,9 +9,9 @@ log4j.logger.org.hibernate.SQL=DEBUG
 log4j.logger.org.hibernate.type=ERROR
 log4j.logger.org.hibernate.tool.hbm2ddl=ERROR
 log4j.logger.org.hibernate.cache=ERROR
-log4j.logger.org.springframework=DEBUG
-log4j.logger.org.springframework.security.web=DEBUG
-log4j.logger.org.springframework.web=DEBUG
+log4j.logger.org.springframework=ERROR
+log4j.logger.org.springframework.security.web=ERROR
+log4j.logger.org.springframework.web=ERROR
 log4j.logger.org.springframework.jdbc=ERROR
 log4j.logger.org.springframework.orm=ERROR
 log4j.logger.org.displaytag=ERROR
